# nft-wallet

./: .gitignore  Cargo.toml  build.rs  build.sh  deploy.sh  dfx.json  package-lock.json  package.json  setupEnv.js  start.sh
.parcel-cache/: 15d80f13c5d19db7  4a1e90efd5769f1d  8454f549376ff9a1  9c4db7f2c4a2647c  a8f2fc3cf218d043.txt  f0901b713061b285  lock.mdb
frontend/: .gitignore  package-lock.json  package.json  rollup.config.js
frontend/public/: global.css  index.html  index.src.html
frontend/src/: App.svelte  main.js  nft.js  transactionHistory.js
frontend/src/components/: Authenticator.svelte  CanisterId.svelte  Carousel.svelte  ContentBox.svelte  Copier.svelte  Loader.svelte  NFTBox.svelte  NFTGrid.svelte  Transactions.svelte
frontend/src/pages/: CollectionView.svelte  NFTView.svelte  RegisterView.svelte  TransferView.svelte  WalletView.svelte
frontend/src/storage/: transactionHistory.js
frontend/src/theme/dark/: _smui-theme.scss
src/: http.rs  lib.rs  wrap.rs
src/declarations/nftwallet/: index.js  nftwallet.did.d.ts  nftwallet.did.js
