[package]
name = "nft-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3"
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
include_dir = "0.7"
url = "2.2"
percent-encoding = "2.1"
mime_guess = "2"
once_cell = "1.9"
parking_lot = "0.12"
ic-certified-map = "0.3"
serde_cbor = "0.10"
base64 = "0.13"

[build-dependencies]
walkdir = "2.3"
sha2 = "0.10"

[lib]
crate-type = ["cdylib"]
